# cpp_basic_template

./: .gitignore  .vixrc  .ycm_extra_conf.py  CMakeLists.txt  README.md  compile_commands.json
include/: hello.h
src/: hello.cpp  main.cpp
targets/debug/: info.md
targets/release/: info.md
targets/test/: info.md
